<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#92AFD7"
        android:padding="20dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100sp">

            <TextView
                android:id="@+id/tv_homeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:paddingTop="55sp"
                android:text="@string/homeTitle"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="170sp">

            <TextView
                android:id="@+id/tv_homeSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|center_horizontal"
                android:text="@string/homeSubtitle"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="35sp">

            <TextView
                android:id="@+id/tv_enterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:text="@string/enterName"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="180dp">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10sp"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80sp">

            <Button
                android:id="@+id/btn_startQuiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:backgroundTint="#395B50"
                android:fontFamily="@font/pt_sans"
                android:text="@string/startQuiz"
                android:textAllCaps="false"
                android:textSize="22sp"

                app:cornerRadius="40dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>