<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityResults">

    <TableLayout
        android:id="@+id/tableLayout_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#92AFD7"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_resultsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pt_sans"
                android:gravity="bottom|center"
                android:minHeight="150dp"
                android:text="@string/resultsTitle"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_resultsSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|top"
                android:minHeight="100dp"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_correct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|right"
                android:minHeight="55dp"
                android:paddingStart="0dp"
                android:text="@string/correct"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_correctCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="55dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|left"
                android:minHeight="55dp"
                android:paddingStart="50dp"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_incorrect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|right"
                android:minHeight="55dp"
                android:paddingStart="0dp"
                android:text="@string/incorrect"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_incorrectCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|left"
                android:minHeight="55dp"
                android:paddingStart="50dp"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_overall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|right"
                android:minHeight="55dp"
                android:paddingStart="0dp"
                android:text="@string/overall"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_overallPercentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_weight="1"
                android:background="#C5D1EB"
                android:fontFamily="@font/pt_sans"
                android:gravity="center|left"
                android:minHeight="55dp"
                android:paddingStart="35dp"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="250dp">

            <Button
                android:id="@+id/btn_playAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:backgroundTint="#395B50"
                android:fontFamily="@font/pt_sans"
                android:gravity="bottom|center|top"
                android:padding="20dp"
                android:text="@string/playAgain"
                android:textAllCaps="false"
                android:textSize="26sp"
                app:cornerRadius="40dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>